--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   },
   "homepage": "https://github.com/Nathannov/upload-file#readme",
   "dependencies": {
-    "csv-parse": "^5.3.0",
-    "fast-csv": "^4.3.6",
-    "readline": "^1.3.0"
+    "csv-parse": "^5.3.0"
   }
 }
