--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "upload-file",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a Home Work Assignment for Encora",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "start": "node index.js"
   },
   "repository": {
@@ -12,16 +12,21 @@
     "url": "git+https://github.com/Nathannov/upload-file.git"
   },
   "keywords": [
-    "testing",
-    "nathan"
+    "read file",
+    "csv",
+    "square"
   ],
-  "author": "Nathannov",
+  "author": "Jonathan Valencia Navarro",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nathannov/upload-file/issues"
   },
   "homepage": "https://github.com/Nathannov/upload-file#readme",
   "dependencies": {
-    "csv-parse": "^5.3.0"
+    "csv-parse": "^5.3.0",
+    "readme-md-generator": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3"
   }
 }
